# necklet

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: c-cpp.yaml
include/necklet/: bowling.h  fizzbuzz.h  leap_years.h  markov_chain.h  poker_hands.h  roman_numerals.h  string_calculator.h  word_wrap.h
src/: bowling.c  fizzbuzz.c  leap_years.c  markov_chain.c  poker_hands.c  roman_numerals.c  string_calculator.c  word_wrap.c
tests/unit/: CMakeLists.txt  bowling.cpp  fizzbuzz.cpp  leap_years.cpp  markov_chain.cpp  poker_hands.cpp  roman_numerals.cpp  string_calculator.cpp  word_wrap.cpp
